--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,20 +1,17 @@
-name:   CI/CD
+name: Super-Linter
 
-on: 
-  push: 
+on: push
 
-  jobs: 
-    linter: 
+jobs:
+  super-lint:
     name: Lint code base
     runs-on: ubuntu-latest
-
     steps:
-      -name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-
-      -name: Runner
-        uses: github/linter@v3
-        env: 
-        DEFAULT_BRANCH: main
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Super-Linter
+        uses: github/super-linter@v4
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
